--- a/code_templates/index_template.html
+++ b/code_templates/index_template.html
@@ -1,95 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Manager</title>
-    <!-- Styles for the page -->
-    <style>
-      body {
-        font-family: "Arial", sans-serif;
-        margin: 20px;
-        background-color: #f4f4f4;
-        color: #333;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Task Manager</title>
+  <style>
+    body {
+      font-family: "Arial", sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f9fa;
+      color: #495057;
+    }
 
-      h1 {
-        color: #007bff;
-        text-align: center;
-        margin-bottom: 20px;
-      }
+    header {
+      background-color: #007bff;
+      color: #fff;
+      padding: 10px 20px;
+      text-align: center;
+    }
 
-      form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 20px;
-      }
+    nav {
+      background-color: #343a40;
+      overflow: hidden;
+    }
 
-      label {
-        margin-bottom: 5px;
-        color: #007bff;
-      }
+    nav a {
+      float: left;
+      display: block;
+      color: #fff;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
 
-      input {
-        padding: 8px;
-        margin-bottom: 15px;
-        width: 300px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-      }
+    nav a:hover {
+      background-color: #ddd;
+      color: #333;
+    }
 
-      button {
-        background-color: #007bff;
-        color: #fff;
-        padding: 10px 15px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
+    h1, h2 {
+      color: #007bff;
+      text-align: center;
+      margin-bottom: 20px;
+    }
 
-      button:hover {
-        background-color: #0056b3;
-      }
+    section {
+      background-color: #fff;
+      border: 1px solid #ddd;
+      margin: 20px;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
 
-      ul {
-        list-style-type: none;
-        padding: 0;
-      }
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 20px;
+    }
 
-      li {
-        background-color: #fff;
-        border: 1px solid #ddd;
-        margin-bottom: 10px;
-        padding: 15px;
-        display: flex;
-        justify-content: space-between;
-        border-radius: 4px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      }
+    label {
+      margin-bottom: 5px;
+      color: #007bff;
+    }
 
-      li span {
-        font-weight: bold;
-        margin-right: 10px;
-      }
+    input {
+      padding: 8px;
+      margin-bottom: 15px;
+      width: 300px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
 
-      li button {
-        background-color: #dc3545;
-        color: #fff;
-        border: none;
-        padding: 8px;
-        cursor: pointer;
-        border-radius: 4px;
-      }
+    button {
+      background-color: #007bff;
+      color: #fff;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
 
-      li button:hover {
-        background-color: #c82333;
-      }
-    </style>
-  </head>
-  <body>
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      background-color: #fff;
+      border: 1px solid #ddd;
+      margin-bottom: 10px;
+      padding: 15px;
+      display: flex;
+      justify-content: space-between;
+      border-radius: 4px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    li span {
+      font-weight: bold;
+      margin-right: 10px;
+    }
+
+    li button {
+      background-color: #dc3545;
+      color: #fff;
+      border: none;
+      padding: 8px;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    li button:hover {
+      background-color: #c82333;
+    }
+  </style>
+</head>
+<body>
+  <header>
     <h1>Task Manager</h1>
+  </header>
 
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About Us</a>
+    <a href="#contact">Contact</a>
+    <a href="#tasks">Tasks</a>
+  </nav>
+
+  <section id="home">
     <!-- Form for creating tasks -->
     <form id="taskForm">
       <label for="taskId">Task ID:</label>
@@ -102,89 +147,106 @@
 
     <!-- List to display tasks -->
     <ul id="taskList"></ul>
+  </section>
 
-    <!-- JavaScript code to interact with the backend -->
-    <script>
-      // Event listener for when the page is loaded
-      document.addEventListener("DOMContentLoaded", function () {
-        // Load tasks when the page is loaded
-        loadTasks();
-      });
+  <!-- About Us Section -->
+  <section id="about">
+    <h2>About Us</h2>
+    <p>Welcome to Task Manager, powered by Startright - Your AI full-stack website code generation tool.</p>
+    <p>Startright simplifies the process of building robust web applications. With just one instance, we generate a full-stack boilerplate tailored to your needs.</p>
+    <p>Explore the power of AI-driven development and streamline your projects with Startright.</p>
+  </section>
 
-      // Function to fetch and display tasks from the backend
-      async function loadTasks() {
-        try {
-          const response = await fetch("http://localhost:8080/tasks");
-          const tasks = await response.json();
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>If you have any questions or feedback, feel free to reach out to us.</p>
+    <p>Email: info@startright.com</p>
+    <p>Phone: +1 (123) 456-7890</p>
+  </section>
 
-          const taskList = document.getElementById("taskList");
-          taskList.innerHTML = "";
+  <!-- JavaScript code to interact with the backend -->
+  <script>
+    // Event listener for when the page is loaded
+    document.addEventListener("DOMContentLoaded", function () {
+      // Load tasks when the page is loaded
+      loadTasks();
+    });
 
-          // Loop through tasks and create list items
-          tasks.forEach((task) => {
-            const li = document.createElement("li");
-            li.innerHTML = `<span>ID: ${task.id}, Name: ${task.name}</span> <button onclick="deleteTask(${task.id})">Delete</button>`;
-            taskList.appendChild(li);
-          });
-        } catch (error) {
-          // Handle errors if any occur during fetching
-          console.error("Error fetching tasks:", error);
-        }
+    // Function to fetch and display tasks from the backend
+    async function loadTasks() {
+      try {
+        const response = await fetch("http://localhost:8080/tasks");
+        const tasks = await response.json();
+
+        const taskList = document.getElementById("taskList");
+        taskList.innerHTML = "";
+
+        // Loop through tasks and create list items
+        tasks.forEach((task) => {
+          const li = document.createElement("li");
+          li.innerHTML = `<span>ID: ${task.id}, Name: ${task.name}</span> <button onclick="deleteTask(${task.id})">Delete</button>`;
+          taskList.appendChild(li);
+        });
+      } catch (error) {
+        // Handle errors if any occur during fetching
+        console.error("Error fetching tasks:", error);
       }
+    }
 
-      // Function to create a new task
-      async function createTask() {
-        const taskId = document.getElementById("taskId").value;
-        const taskName = document.getElementById("taskName").value;
+    // Function to create a new task
+    async function createTask() {
+      const taskId = document.getElementById("taskId").value;
+      const taskName = document.getElementById("taskName").value;
 
-        try {
-          const response = await fetch("http://localhost:8080/tasks", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-              Accept: "application/json", // Include Accept header for CORS
-            },
-            body: JSON.stringify({
-              id: parseInt(taskId),
-              name: taskName,
-              completed: false,
-            }),
-          });
+      try {
+        const response = await fetch("http://localhost:8080/tasks", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            Accept: "application/json", // Include Accept header for CORS
+          },
+          body: JSON.stringify({
+            id: parseInt(taskId),
+            name: taskName,
+            completed: false,
+          }),
+        });
 
-          if (response.ok) {
-            // Reload tasks and reset input values if successful
-            loadTasks();
-            document.getElementById("taskId").value = "";
-            document.getElementById("taskName").value = "";
-          } else {
-            // Handle errors if task creation fails
-            console.error("Failed to create task:", response.statusText);
-          }
-        } catch (error) {
-          // Handle errors if any occur during the process
-          console.error("Error creating task:", error);
+        if (response.ok) {
+          // Reload tasks and reset input values if successful
+          loadTasks();
+          document.getElementById("taskId").value = "";
+          document.getElementById("taskName").value = "";
+        } else {
+          // Handle errors if task creation fails
+          console.error("Failed to create task:", response.statusText);
         }
+      } catch (error) {
+        // Handle errors if any occur during the process
+        console.error("Error creating task:", error);
       }
+    }
 
-      // Function to delete a task
-      async function deleteTask(id) {
-        try {
-          const response = await fetch(`http://localhost:8080/tasks/${id}`, {
-            method: "DELETE",
-          });
+    // Function to delete a task
+    async function deleteTask(id) {
+      try {
+        const response = await fetch(`http://localhost:8080/tasks/${id}`, {
+          method: "DELETE",
+        });
 
-          if (response.ok) {
-            // Reload tasks if deletion is successful
-            loadTasks();
-          } else {
-            // Handle errors if task deletion fails
-            console.error("Failed to delete task:", response.statusText);
-          }
-        } catch (error) {
-          // Handle errors if any occur during the process
-          console.error("Error deleting task:", error);
+        if (response.ok) {
+          // Reload tasks if deletion is successful
+          loadTasks();
+        } else {
+          // Handle errors if task deletion fails
+          console.error("Failed to delete task:", response.statusText);
         }
+      } catch (error) {
+        // Handle errors if any occur during the process
+        console.error("Error deleting task:", error);
       }
-    </script>
-  </body>
+    }
+  </script>
+</body>
 </html>
