--- a/code_templates/index_template.html
+++ b/code_templates/index_template.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Task Manager</title>
+  <!-- CSS Styling-->
   <style>
     body {
       font-family: "Arial", sans-serif;
